test/bad/classes/struct05.px

class Class def
    x: Test
